--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.demo.salminnella.intentservicesleeper.MainActivity">
 
     <TextView
+        android:id="@+id/text_view_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -14,5 +15,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/download_button_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Download"
+        app:layout_constraintTop_toBottomOf="@+id/text_view_main"
+        app:layout_constraintLeft_toRightOf="@+id/text_view_main"
+        app:layout_constraintRight_toLeftOf="@+id/text_view_main"/>
 
 </android.support.constraint.ConstraintLayout>
